Changed prod inex.html path, changed tooltips, changed punctuations, Fixed reset jumping issue

--- a/Common/css/style.css
+++ b/Common/css/style.css
@@ -54,6 +54,6 @@ body {
 #demoList .badge-purple {
     background-color: #5083c3;
 }
-#demoList .badge-dark-blue {
-    background: #063261;
+#demoList .badge-orange {
+    background: #bf450b;
 }
